# microduck_pet_detect

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
models/: pet_detect.onnx
src/: lib.rs
training/: train.py
